Fix info card overflow problem with overflow scroll

--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -87,6 +87,7 @@ section {
   top: 181px;
   height: calc(99vh - 191px);
   width: 30vw;
+  overflow: scroll;
 }
 
 section {
